# entry-cli

./: Makefile  README.md  calc_props.py  calc_props_test.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
tests/: calc_props_test.py  context.py  test_properties.py
